<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.platzi.platzigram.login.view.LoginActivity"
    android:background="@color/colorPrimary"
    >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/platzigram"
            android:contentDescription="@string/app_name"
            android:onClick="platziUrlBrowser"
            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:fillViewport="true"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_horizontal_login"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                />
            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                />
             </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/text_button_login"
            android:theme="@style/RaisedButtonDark"
            android:onClick="goActivityContainer"
            tools:ignore="OnClick" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_buttonFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/dontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_donthaveaccount"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/createHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createHere"
                android:layout_marginLeft="@dimen/timecard_marginleft_card"

                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/textsize_donthaveaccount"
                android:layout_toEndOf="@id/dontHaveAccount"
                android:onClick="goCreateAccount"
                />

            <ProgressBar
                android:id="@+id/progressbarLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                />

        </RelativeLayout>
      </LinearLayout>
    </ScrollView>
  </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>