<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".post.view.NewPostActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:scaleType="centerCrop"
            android:background="@color/backgroundtext_card"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:theme="@style/EditTextBlack"
            android:layout_weight="1.5"
            android:layout_marginTop="@dimen/fab_margin"
            >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tittle"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:theme="@style/EditTextBlack"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnCreatePost"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/text_button_create_post"
            android:theme="@style/RaisedButtonDark"
            android:layout_marginTop="@dimen/fab_margin"
            />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>